crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__mother_of_runes_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 98,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "{T}: Target creature you control gains protection from the color of your choice until end of turn."
      },
      "node": {
        "Spell": {
          "source_text": "Target creature you control gains protection from the color of your choice until end of turn",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 92,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "Target creature you control gains protection from the color of your choice until end of turn"
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "GenericEffect",
                    "static_abilities": [
                      {
                        "mode": "Continuous",
                        "affected": {
                          "type": "ParentTarget"
                        },
                        "modifications": [
                          {
                            "type": "AddKeyword",
                            "keyword": {
                              "Protection": "ChosenColor"
                            }
                          }
                        ],
                        "condition": null,
                        "affected_zone": null,
                        "effect_zone": null,
                        "active_zones": [],
                        "characteristic_defining": false,
                        "description": "gain protection from the color of your choice"
                      }
                    ],
                    "duration": "UntilEndOfTurn",
                    "target": {
                      "type": "Typed",
                      "type_filters": [
                        "Creature"
                      ],
                      "controller": "You",
                      "properties": []
                    }
                  },
                  "duration": "UntilEndOfTurn",
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null,
                "chosen_color_grant": "IncludesIndependentChoice"
              }
            ],
            "kind": "Activated",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null,
            "cost": {
              "type": "Tap"
            },
            "description": "{T}: Target creature you control gains protection from the color of your choice until end of turn.",
            "stages": [
              "NormalizeActivatedManaInstead",
              "ExtractCostReduction",
              "ExtractManaSpendTrigger"
            ]
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "{T}: Target creature you control gains protection from the color of your choice until end of turn.",
  "card_name": "Mother of Runes"
}
