crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__murderous_rider_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 8,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Lifelink"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Lifelink",
            "description": "Lifelink"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 9,
          "end_byte": 66,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When ~ dies, put it on the bottom of its owner's library."
      },
      "node": {
        "PreLoweredTrigger": {
          "mode": "ChangesZone",
          "execute": {
            "kind": "Spell",
            "effect": {
              "type": "PutAtLibraryPosition",
              "target": {
                "type": "ParentTarget"
              },
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "position": {
                "type": "Bottom"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "valid_card": {
            "type": "SelfRef"
          },
          "origin": "Battlefield",
          "destination": "Graveyard",
          "trigger_zones": [
            "Graveyard"
          ],
          "phase": null,
          "optional": false,
          "damage_kind": "Any",
          "secondary": false,
          "valid_target": null,
          "valid_source": null,
          "description": "When ~ dies, put it on the bottom of its owner's library.",
          "constraint": null,
          "condition": null,
          "batched": false
        }
      }
    }
  ],
  "source_text": "Lifelink\nWhen this creature dies, put it on the bottom of its owner's library.",
  "card_name": "Murderous Rider"
}
