crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__nashi_moon_sages_scion_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
assertion_line: 724
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [
    {
      "mode": "DamageDone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "ExileTop",
          "player": {
            "type": "Controller"
          },
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "position": {
            "type": "Top"
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "CastFromZone",
            "target": {
              "type": "TrackedSetFiltered",
              "id": 0,
              "filter": {
                "type": "Any"
              },
              "caused_by": "Exiled"
            },
            "without_paying_mana_cost": false,
            "mode": "Play",
            "alt_ability_cost": {
              "type": "PayLife",
              "amount": {
                "type": "Ref",
                "qty": {
                  "type": "SelfManaValue"
                }
              }
            },
            "duration": "UntilEndOfTurn"
          },
          "cost": null,
          "sub_ability": null,
          "duration": "UntilEndOfTurn",
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "sub_link": "SequentialSibling"
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false,
        "player_scope": {
          "type": "All"
        }
      },
      "valid_card": null,
      "origin": null,
      "destination": null,
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "CombatOnly",
      "secondary": false,
      "valid_target": {
        "type": "Player"
      },
      "valid_source": {
        "type": "SelfRef"
      },
      "description": "Whenever ~ deals combat damage to a player, exile the top card of each player's library. Until end of turn, you may play one of those cards. If you cast a spell this way, pay life equal to its mana value rather than paying its mana cost.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    {
      "Ninjutsu": {
        "type": "Cost",
        "shards": [
          "Black"
        ],
        "generic": 3
      }
    }
  ]
}
